# miniRt

./: .gitmodules  CMakeLists.txt  Makefile  clean.sh  miniRT  run.sh
includes/: bool.h  data_struct.h  delta.h  lib.h  libft.h  parser.h  ray.h  rgb.h  util.h  vec3.h  vector.h  xyz.h
libft/: CMakeLists.txt  Makefile  free_array.c  ft_atod.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_contains.c  ft_ends_with.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhite_space.c  ft_itoa.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_starts_with.c  ft_strchr.c  ft_strdup.c  ft_streq.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strrepl.c  (+7 more)
libft/ft_printf/: ft_printf.c  hex.c  hex_util.c  internal.h  printf.h  printing.c
libft/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c  internal.h
libft/list/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  list.h
libft/string/: ft_string.c  ft_string_append.c  ft_string_operations.c  ft_string_util.c  string.h  string_internal.h
scenes/: bumps.rt  catterpillar.rt  cy.rt  cy3.rt  cylinder.rt  example.rt  example2.rt  inside.rt  inside_cy.rt  mouse.rt  mouse_profile.rt  mouse_topview.rt  pipes.rt  plane.rt  sphere.rt  spheres.rt  stickman.rt
srcs/: camera.c  color.c  coords.c  free_list.c  miniRT.c  miniRt.c  (+3 more)
(+75 files in other folders)
