cmake_minimum_required(VERSION 3.17)
project(Libft C)

set(CMAKE_C_STANDARD 99)

add_executable(Libft main.c ft_strrepl.c ft_iswhite_space.c ft_printf/ft_printf.c ft_printf/hex.c ft_printf/hex_util.c ft_printf/printing.c ft_tolower.c ft_strlen.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isprint.c ft_memset.c ft_bzero.c ft_memcpy.c libft.h ft_memmove.c ft_strlcpy.c ft_strlcat.c ft_strchr.c ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c ft_isascii.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_itoa.c ft_split.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c ft_streq.c)